[package]
name = "rigid_pixels"
version = "0.1.0"
edition = "2021"

[profile.dev]
overflow-checks=false

[profile.release]
overflow-checks=false
panic="abort"

[dependencies]
bitvec = { version = "1.0.1", default-features = false }
geese = { version = "0.3.9", default-features = false }
macroquad = { version = "0.4.5", default-features = false }
slab = { version = "0.4.9", default-features = false }